fixes bug 71005 "Memory leak in implementation of nsJARURI" patch=badami@netscape.com r=gordon@netscape.com sr=darin@netscape.com